--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,16 @@ body {
 }
 
 .marker {
-  
   transform: translate(-50%,-100%);
+}
+
+.marker.yellow svg path{
+  stroke: #F3B73E;
+}
+.marker.red svg path{
+  stroke: rgb(243, 89, 62);
+}
+
+.popup {
+  max-width: 300px;
 }
