--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,11 +12,11 @@ body {
   transform: translate(-50%,-100%);
 }
 
-.marker.yellow svg path{
-  stroke: #F3B73E;
+.marker.yellow path {
+  fill: #F3B73E;
 }
-.marker.red svg path{
-  stroke: rgb(243, 89, 62);
+.marker.red path {
+  fill: #f3593e;
 }
 
 .popup {
