--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,5 +20,29 @@ body {
 }
 
 .popup {
-  max-width: 300px;
+  width: 400px;
+  padding: 1rem;
+}
+
+.popup img {
+  width: 100%;
+  height: 200px;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
+}
+
+.entry-form label, 
+.entry-form input, 
+.entry-form textarea, 
+.entry-form button  {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+  display: block;
+  width: 100%;
+}
+
+.error {
+  color: red;
+  font-weight: bold;
 }
